# prog_rust

./: Cargo.toml  Copy.toml  README.md
crates/hi_rbatis/: Cargo.toml  readme.md
crates/hi_rbatis/src/: main.rs
crates/my_rust/: Cargo.toml
crates/my_rust/src/: main.rs
crates/my_rust/src/ch1/: _actix_gcd.rs  _run_web_server.rs  actix_gcd.rs  handling_command_line_arguments.rs  mandelbrot.rs  mod.rs
crates/my_rust/src/ch10/: bin_tree.rs  enum_with_data.rs  generic_enums.rs  matches.rs  mod.rs  readme.md
crates/my_rust/src/ch11/: associated_constants.rs  fully_qualified_method_call.rs  generics.rs  impl_traits.rs  iterators.rs  mod.rs  object_friendly_trait.rs  readme.md  trait_objects.rs
crates/my_rust/src/ch12/: index_traits.rs  mod.rs  ops_overloading.rs  readme.md
crates/my_rust/src/ch13/: defaults.rs  deref_coercions.rs  drops.rs  mod.rs  readme.md
crates/my_rust/src/ch14/: callbacks.rs  closures.rs  mod.rs  readme.md
crates/my_rust/src/ch15/: adapters.rs  bin_heaps.rs  mod.rs  own_iter.rs  readme.md  sets.rs
crates/my_rust/src/ch16/: deques.rs  mod.rs  readme.md  vecs.rs
crates/my_rust/src/ch2/: mod.rs  quickreplace.rs
crates/my_rust/src/ch3/: booleans.rs  characters.rs  floating_point_types.rs  mod.rs  readme.md  sequence_values.rs  strings.rs  tuples.rs
crates/my_rust/src/ch4/: mod.rs  ownership.rs  readme.md  shared_ownership.rs
crates/my_rust/src/ch5/: lifetimes.rs  mod.rs  readme.md  refs_values.rs
crates/my_rust/src/ch6/: readme.md
crates/my_rust/src/ch7/: error.rs  mod.rs  panics.rs  readme.md
crates/my_rust/src/ch8/: mod.rs  readme.md
crates/my_rust/src/ch9/: generic_structs.rs  impls.rs  mod.rs  (+3 more)
(+6 files in other folders)
