[package]
name = "hi_rbatis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rbatis deps
rbs = { version = "4.5"}
rbatis = { version = "4.5"}
rbdc-sqlite = { version = "4.5" }
#rbdc-mysql={version="4.5"}
#rbdc-pg={version="4.5"}
#rbdc-mssql={version="4.5"}

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = "1.6"