[package]
name = "my_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# inventory = "0.3"

linkme = "0.3"

# 乖乖的锁版本 随便用新版本会出问题的
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }

num = "0.4"
image = "0.13.0"
crossbeam = "0.8"